hw5_lab8/tests/errors/sem_val_compound_assign.kt
// EXPECT: semantic error — compound-assigning val
fun main() {
    val x: Int = 5
    x += 1
}
